--- a/Table1/index.html
+++ b/Table1/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>HristijanRalevski</title>
-</head>
-<body>
-    <caption>Table</caption>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>HristijanRalevksi</title>
+  </head>
+  <body>
+    
     <table>
-        <tr>
-            <td colspan="3">Top</td>
-        </tr>
-        <tr>
-            <td rowspan="2">Way Left</td>
-            <td>Middle Up</td>
-            <td rowspan="2">WayRight</td>
-        </tr>
-        <tr>
-            <td>Middle Downs</td>
-        </tr>
-        <t>
-            <td colspan="3">Bpttom</td>
-        </tr>
+        <caption>
+            Table
+          </caption>
+      <tr>
+        <td colspan="3">Top</td>
+      </tr>
+      <tr>
+        <td rowspan="2">Way Left</td>
+        <td>Middle Up</td>
+        <td rowspan="2">WayRight</td>
+      </tr>
+      <tr>
+        <td>Middle Downs</td>
+      </tr>
+      <tr>
+        <td colspan="3">Bottom</td>
+      </tr>
     </table>
-</body>
+  </body>
 </html>
